--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "laralum/notifications",
     "description": "Notifications module for laralum",
     "require": {
-		"laralum/laralum": "dev-master"
+		"laralum/laralum": "1.*"
 	},
     "license": "MIT",
     "authors": [
